Wed Apr 19 16:47:49 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Added a PositionList base class, and methods to return position
	  lists from postlists.  No actual PositionLists yet implemented.

	* Fixed a resource (memory and file descriptor) leak in Muscat36
	  backends.

Tue Apr 18 16:42:03 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Made OmDocumentContents contain OmDatas and OmKeys rather than
	  strings.  Added constructors to OmData and OmKey.

Tue Apr 18 15:43:30 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* StatsGatherer now knows about its associated StatsSource objects.

	* StatsGatherer is now responsible for calling
	  StatsSource::contrib_my_stats() on all its children, instead
	  of LocalMatch::prepare_match().

Mon Apr 17 17:48:48 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Implemented sleepycat termlists.

Fri Apr 14 17:22:04 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Added quickstart guide to documentation.

	* Declare this to be Version 0.1.2

Thu Apr 13 11:05:31 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Document data storage implementation done.  Sleepydatabase now
	  functions for simple retrieval: missing is general database
	  statistics (eg, get_doccount() always returns 1), and storage of
	  keys.

Thu Apr 13 01:37:41 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Added SleepyDocument class, to store keys and document data.
	  Implementation not yet done.

Wed Apr 12 19:31:21 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* API change - added a termfreq member to OmDocumentTerm.

	* SleepyDatabase now adds entries to postlists and termlists.  Doesn't
	  yet store documents, or correct already existing wdfs in termlists.

Wed Apr 12 17:36:58 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Added internal test to check that SleepyList packs and unpacks
	  correctly.
