@@ -87,7 +87,7 @@ PostList * DAPostList::skip_to(om_docid did, om_weight w_min)
 }
 
 PositionList &
-DAPostList::get_position_list() const
+DAPostList::get_position_list()
 {
     throw OmUnimplementedError("DAPostList::get_position_list() unimplemented");
 }
