@@ -10,7 +10,8 @@ noinst_HEADERS = sleepy_list.h \
 		 sleepy_termcache.h \
                  sleepy_database.h \
                  sleepy_database_internals.h \
-		 sleepy_document.h
+		 sleepy_document.h \
+		 sleepy_positionlist.h
 
 noinst_LTLIBRARIES = libsleepy.la
 
@@ -20,7 +21,9 @@ libsleepy_la_SOURCES = sleepy_list.cc \
                        sleepy_termcache.cc \
                        sleepy_database.cc \
                        sleepy_database_internals.cc \
-		       sleepy_document.cc
+		       sleepy_document.cc \
+		       sleepy_positionlist.cc
+
 libsleepy_la_LIBADD = @SLEEPYCAT_LIBS@
 
 libsleepy_la_LDFLAGS = @SLEEPYCAT_LINKFLAGS@
