@@ -6,7 +6,7 @@ INCLUDES = -I$(top_srcdir)/common -I$(top_srcdir)/include
 
 noinst_HEADERS = orpostlist.h andpostlist.h andnotpostlist.h \
  andmaybepostlist.h xorpostlist.h branchpostlist.h filterpostlist.h \
- emptypostlist.h branchtermlist.h ortermlist.h
+ emptypostlist.h branchtermlist.h ortermlist.h phrasepostlist.h
 
 noinst_LTLIBRARIES = libmatcher.la
 
